--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#6186ea</color>
+    <color name="colorPrimaryDark">#3865e1</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorBackground">#f0f0f0</color>
+    <color name="colorTitle">#626f93</color>
+    <color name="colorText">#888888</color>
+    <color name="colorVice">#aaaaaa</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
