--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
     </style>
 
     <style name="PageTitle">
-        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize">20sp</item>
     </style>
 
