--- a/app/src/main/res/layout/item_treasure.xml
+++ b/app/src/main/res/layout/item_treasure.xml
@@ -9,7 +9,8 @@
     android:focusable="true"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    app:cardElevation="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
